# restful-functions

./: .devcontainer.json  .gitignore  .pydocstyle  .travis.yml  Dockerfile  LICENSE.txt  MANIFEST.in  Makefile  README.rst  dev-requirements.txt  docker-compose.test.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  test-requirements.txt
examples/: example.py  example_multi_pattern.py  example_timeout.py
restful_functions/: __init__.py  _meta.py  job.py  logger.py  manager.py  server.py  task.py
restful_functions/modules/: function.py  process.py  task.py
restful_functions/utils/: logger.py
tests/: __init__.py  test_job.py  test_manager.py  test_server.py  test_server_with_requests.py  test_task.py
tests/modules/: test_function.py  test_task.py
