[tool.poetry]
name = "restful-functions"
version = "3.0.0"
description = "A Server Module to Build RESTful APIs for Python Functions"
authors = []
readme = "README.rst"
homepage = "https://github.com/insight-technology/restful-functions"
repository = "https://github.com/insight-technology/restful-functions"
documentation = "https://github.com/insight-technology/restful-functions/blob/master/README.rst"
classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Operating System :: POSIX :: Linux',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Topic :: Software Development :: Libraries',
    'Topic :: Software Development :: Libraries :: Python Modules',    
]
license = "MIT"


[tool.poetry.dependencies]
python = "^3.6"
aiohttp = "^3.7.3"
idna_ssl = "^1.1.0"
importlib-metadata = {version = "^3.0", python = "<3.8"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
docutils = "^0.16"
flake8 = "^3.8.4"
Pygments = "^2.7.2"
mypy = "^0.790"
pydocstyle = "^5.1.1"
pytest-cov = "^2.10.1"
pytest-runner = "^5.2"
pytest-aiohttp = "^0.3.0"
requests = "^2.25.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
